--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "nuxt": "^2.15.8",
     "tify": "^0.27.0",
     "vue": "^2.6.14",
+    "vue-gtag": "^1.16.1",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
     "webpack": "^4.46.0"
