--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "core-js": "^3.19.3",
     "nuxt": "^2.15.8",
+    "ol": "^7.2.2",
     "tify": "^0.27.0",
     "vue": "^2.6.14",
     "vue-gtag": "^1.16.1",
@@ -22,7 +23,6 @@
   "devDependencies": {
     "@nuxt/postcss8": "^1.1.3",
     "autoprefixer": "^10.4.13",
-    "postcss": "^8.4.21",
-    "tailwindcss": "^3.2.4"
+    "postcss": "^8.4.21"
   }
 }
