--- a/.github/workflows/get_latest_content_data.yml
+++ b/.github/workflows/get_latest_content_data.yml
@@ -3,6 +3,9 @@ name: Update content JSON files by pulling from the Diedrick CMS API
 on:
   schedule:
     - cron:  '0 10 * * *'
+  repository_dispatch:
+    types:
+      - webhook
   workflow_dispatch:
 
 jobs:
